# temporal-vault-aws-tf-demo

./: .env.example  .gitignore  LICENSE  README.md  connect-ec2.sh  pyproject.toml  scope.md  test_terraform_plans.sh
client/: start_bootstrap_workflow.py  start_infra_worker.py  start_teardown_workflow.py  trigger_order.py
diagrams/: 01-system-architecture.md  02-bootstrap-workflow.md  03-order-fulfillment-workflow.md  04-vault-credential-flow.md
terraform/modules/aws_infrastructure/: main.tf  outputs.tf  userdata.sh  variables.tf
terraform/modules/hcp_vault_cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/hcp_vault_config/: main.tf  outputs.tf  variables.tf
terraform/modules/temporal_cloud/: main.tf  outputs.tf  variables.tf
workers/common/: secrets.py  temporal_client.py
workers/infra_worker/: config.py  terraform_runner.py
workers/infra_worker/activities/: bootstrap_activities.py
workers/infra_worker/workflows/: bootstrap.py  teardown.py
workers/order_worker/: config.py  interceptors.py  main.py  vault_client.py
workers/order_worker/activities/: order_activities.py
workers/order_worker/workflows/: order_fulfillment.py
